...
  };

  return (
    <View style={styles.container}>

      <View style={styles.header}>
        <Text style={[ThemeTextStyles.appTitle]}>Your Songs</Text>
      </View>

      <View style={styles.actionRow}>
        <LinearGradient
          colors={ThemeSearchBarStyles.gradientColors}
          start={ThemeSearchBarStyles.gradientStart}
...
